fix: fixed additional bug that made menu items appear strangely on mobile

--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -171,7 +171,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 @media (max-width: 767.98px) {
-  nav.navbar .navbar-collapse.show {
+  nav.navbar .navbar-collapse.show,
+  nav.navbar .navbar-collapse.collapsing {
     background-color: var(--color-bg);
     padding: 12px 16px;
     border-bottom: 1px solid var(--color-border);
